Results/Slurm_Results/slurm-463591.out
JobId=463591 JobName=name
   UserId=wzz745(4834) GroupId=wichmann(4014) MCS_label=N/A
   Priority=79484 Nice=0 Account=wichmann QOS=normal
   JobState=RUNNING Reason=None Dependency=(null)
   Requeue=1 Restarts=0 BatchFlag=1 Reboot=0 ExitCode=0:0
   RunTime=00:00:01 TimeLimit=3-00:00:00 TimeMin=N/A
   SubmitTime=2024-07-03T11:07:20 EligibleTime=2024-07-03T11:07:20
   AccrueTime=2024-07-03T11:07:21
   StartTime=2024-07-03T11:07:21 EndTime=2024-07-06T11:07:21 Deadline=N/A
   PreemptEligibleTime=2024-07-03T11:08:21 PreemptTime=None
   SuspendTime=None SecsPreSuspend=0 LastSchedEval=2024-07-03T11:07:21 Scheduler=Backfill
   Partition=2080-galvani AllocNode:Sid=galvani-slurmctl:3827255
   ReqNodeList=(null) ExcNodeList=(null)
   NodeList=galvani-cn120
   BatchHost=galvani-cn120
   NumNodes=1 NumCPUs=8 NumTasks=1 CPUs/Task=8 ReqB:S:C:T=0:0:*:*
   ReqTRES=cpu=8,mem=40G,node=1,billing=2,gres/gpu=1
   AllocTRES=cpu=8,mem=40G,node=1,billing=2,gres/gpu=1,gres/gpu:rtx2080ti=1
   Socks/Node=* NtasksPerN:B:S:C=0:0:*:* CoreSpec=*
   MinCPUsNode=8 MinMemoryNode=40G MinTmpDiskNode=0
   Features=(null) DelayBoot=00:00:00
   OverSubscribe=OK Contiguous=0 Licenses=(null) Network=(null)
   Command=/mnt/qb/home/wichmann/wzz745/Network-Pruning-and-Interpretability/ffcv.sh
   WorkDir=/mnt/qb/home/wichmann/wzz745/Network-Pruning-and-Interpretability
   StdErr=/mnt/qb/home/wichmann/wzz745/Network-Pruning-and-Interpretability/slurm-463591.out
   StdIn=/dev/null
   StdOut=/mnt/qb/home/wichmann/wzz745/Network-Pruning-and-Interpretability/slurm-463591.out
   Power=
   TresPerNode=gres:gpu:1
   MailUser=jonathan.sakouhi@gmail.com MailType=BEGIN,END,FAIL
   

  File "/home/wichmann/wzz745/Network-Pruning-and-Interpretability/./retraining_ffcv.py", line 32
    print(f"Train loader created in {
          ^
SyntaxError: unterminated string literal (detected at line 32)
srun: error: galvani-cn120: task 0: Exited with exit code 1
srun: Terminating StepId=463591.0
